# ai-opportunity-explorator

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
public/: app.js  index.html  style.css
src/: ai_client.py  catalog_manager.py  conversation_manager.py  main.py  models.py  roi_calculator.py  web_validator.py
src/data/: catalog.cypher  catalog.json
